# ani-py

./: README.md  cli.py  jk_anime.py  pyproject.toml
ani_py/: __main__.py  cli.py
ani_py/servers/: jkanime.py
servers/: __init__.py  animeflv.py  jkanime.py
